phonfieldwork 0.0.5 (07.06.2020)
  - add "create_glossed_document()" function for converting .flextext files into a glossed document
  - add "flextext_to_df()" function for reading FLEx files
  - add "eaf_to_df()" function for reading ELAN files
  - add "exb_to_df()" function for reading EXMARaLDA files
  - rename "textgrid" argument into "annotation" argument in "concatenate_soundfiles()" function adding new possible values

phonfieldwork 0.0.4 (10.05.2020)
  - add "create_subannotation()" function

phonfieldwork 0.0.3 (07.01.2020)
  - vertically and horisontally center text in presentations created by "create_presentation()"; thx @Pandaklez #1
  - add the "font_size" argument to the "create_presentation()" function
  - add "rename_videofiles()" function
  - rebuild html viewer for sounds with JavaScript with the help of new functions "create_image_look_up()" and "create_sound_play()".

phonfieldwork 0.0.2 (23.09.2019)
  - make the "create_presentation()" function render silently
  - add a new function "draw_sound()" for creating spectrogram and oscilogram
  - add a new function "create_viewer()" for creating an html viewer with sound and spectrograms
  - correct work of "autonumbering" function in "extract_intervals()" function
  - add new functions  "get_textgrid_names()" and "set_textgrid_names()"
  - finish tutorial <https://agricolamz.github.io/phonfieldwork/>

phonfieldwork 0.0.1 (26.08.2019)
  - initial release